Fix z-index issues with excel importer modal

--- a/app/assets/stylesheets/excel_imports.css.scss
+++ b/app/assets/stylesheets/excel_imports.css.scss
@@ -19,9 +19,14 @@
 	display: none;
 }
 
+.reveal-modal-bg {
+	z-index: 101;
+}
+
 #please-wait-modal {
 	height: 75%;
 	text-align: center;
+	z-index: 1000;
 
 	.valign-content {
 		position: absolute;
